--- a/notebooks/gamut_mapping_medicina_01.ipynb
+++ b/notebooks/gamut_mapping_medicina_01.ipynb
@@ -39,11 +39,11 @@
       "===============================================================================\n",
       "*                                                                             *\n",
       "*   Interpreter :                                                             *\n",
-      "*       python : 3.7.6 (default, Dec 30 2019, 19:38:26)                       *\n",
-      "*                [Clang 11.0.0 (clang-1100.0.33.16)]                          *\n",
+      "*       python : 3.7.3 (default, Dec 20 2019, 18:57:59)                       *\n",
+      "*                [GCC 8.3.0]                                                  *\n",
       "*                                                                             *\n",
       "*   colour-science.org :                                                      *\n",
-      "*       colour : v0.3.15-126-gd9ef0a5a                                        *\n",
+      "*       colour : v0.3.15-128-g60bbc14e                                        *\n",
       "*                                                                             *\n",
       "*   Runtime :                                                                 *\n",
       "*       imageio : 2.8.0                                                       *\n",
@@ -170,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95f04b3800004b6bb750cdf2fd178e56",
+       "model_id": "87d860a419644b4e987c176a7d7323c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -557,7 +557,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "048d35e77a004d7bb978202291e30339",
+       "model_id": "0ce5785d0b4549e9a84fc0f23b7d72e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -581,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bc741679dcd4bff9a2bacee3eae50ce",
+       "model_id": "e5b3e136080847fb84507db77b1a3c0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,7 +605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd5f56efe7ec44b6a6941d5fa0d7aeb2",
+       "model_id": "32efc7cb4794404591d02ccdadb87c4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +669,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0369ae7854d7415a975fc8c83f5a4fd2",
+       "model_id": "5e0174fd933e4fe09491bdcf586721fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1069,7 +1069,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfc7436356a74af4a3bea2743e06b044",
+       "model_id": "2937125e5f19419b996e7550c13acf39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1107,7 +1107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9427c6dc88ba4e3a953c0339e0340dd6",
+       "model_id": "bb9b49697970465d8487a05e2561210b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1251,7 +1251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26df9b46ae20418b99d7dcc6b2de9457",
+       "model_id": "f083339092ab4d35aaa0982f19befb4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1278,7 +1278,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba26234be6114d4eb76d55fa49ebb7a3",
+       "model_id": "8e101c82d8d34932bd8b8096fe815ab8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1304,7 +1304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3c313cabccb4ca3988b52b9bcd03e2f",
+       "model_id": "2a29bd52ee3045ee8180fc88b226f019",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1349,7 +1349,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80b9384316a540f0bb27550479602481",
+       "model_id": "99e20b5bb1544b2f87bde326252a2d14",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1378,7 +1378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "433b68a1ff9d4385a22724ddef3c10aa",
+       "model_id": "d27973cd2dc040f5a63b6cbd0bc17ef6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1419,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
